--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,6 @@
 # Список зависимостей проекта
 # Устанавливаются через: pip install -r requirements.txt
+
+#cmd
+#cd %LOCALAPPDATA%\Programs\Ollama
+#ollama.exe serve
