--- a/requirements.txt
+++ b/requirements.txt
@@ -3,3 +3,4 @@ uvicorn #ASGI-сервер для запуска FastAPI
 google-auth
 google-auth-oauthlib #Google OAuth 2.0 Flow
 python-multipart #Нужно для парсинга тела запроса
+python-dotenv
