--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,24 @@
+
+# --- FastAPI ---
 fastapi
-uvicorn #ASGI-сервер для запуска FastAPI
-google-auth
-google-auth-oauthlib #Google OAuth 2.0 Flow
-python-multipart #Нужно для парсинга тела запроса
-python-dotenv
+uvicorn
+
+# --- Telegram Bot ---
 python-telegram-bot==20.6
+
+# --- Google API ---
+google-auth
+google-auth-oauthlib
 google-api-python-client
+
+# --- Парсинг и обработка ---
+python-dotenv
+python-multipart
+requests
+openai
+
+# --- Whisper (распознавание речи) ---
+faster-whisper
+
+# --- Другие полезные ---
+pydub  # если понадобится работа с audio
