--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,3 @@
-
 # --- FastAPI ---
 fastapi
 uvicorn
@@ -20,5 +19,5 @@ openai
 # --- Whisper (распознавание речи) ---
 faster-whisper
 
-# --- Другие полезные ---
-pydub  # если понадобится работа с audio
+# --- Другие ---
+pydub
